# quickshiori

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  LICENSE  README.md  winrtmc.d.ts
.github/workflows/: ci-windows.yml  release-windows.yml
3rd/: CMakeLists.txt
WinRTMCPlugin/: CMakeLists.txt  README.MD  entry.js  winrtmc_plugin.cpp
module/: CMakeLists.txt
module/ukadll/: CMakeLists.txt  quickjs_ukadll.cpp  saori.js
module/ukafmo/: CMakeLists.txt  quickjs_ukafmo.cpp  test_ukafmo.js  ukafmo.d.ts
module/winrtmc/: CMakeLists.txt  quickjs_winrtmc.cpp  quickjs_winrtmc.h  winrtmc.d.ts
src/: CMakeLists.txt  qjs_reexport.cpp  quickshiori.cpp  quickshiori.h  quickshiori_log.h  quickshiori_module.cpp  quickshiori_module.h  version.h.in
util/: quickshioriLoader.rb  util.cpp
